--- a/chapter-04.tex
+++ b/chapter-04.tex
@@ -12,9 +12,9 @@ the population mean.
 The phenotype of an individual, let's call her $i$, is $X_i$.
 Her genotype at SNP $l$, is
 $G_{i,l}$. Here $G_{i,l}=0,~1,$ or $2$  represents the number of copies of allele $1$ she
-has at this SNP. Her expected phenotype, given her genotype, is then
+has at this SNP. Her expected deviation from the population mean phenotype, given her genotype, is then
 \begin{equation}
-X_{A,i} = \mu + \E (X_i | G_{i,1},\cdots,G_{i,L}) = \mu+ \sum_{l=1}^L \label{pheno_geno}
+X_{A,i} = \E (X_i | G_{i,1},\cdots,G_{i,L}) = \sum_{l=1}^L \label{pheno_geno}
 G_{i,l} a_{l} 
 \end{equation}
 where $\mu$ is the mean phenotype in our population. Now in reality the genetic phenotype is a function of the
@@ -259,7 +259,7 @@ common way to estimate heritability, although it doesn't bypass the
 need to control for environmental correlations between relatives. \\
 
 Our regression allows us to attempt to predict the phenotype of the
-child given the child; how well we can do this depends on the
+child given the phenotypes of the parents; how well we can do this depends on the
 slope. If the slope is close to zero then the parental phenotypes hold no
 information about the phenotype of the child, while if the slope is
 close to one then the parental mid-point is a good guess at the child's
@@ -305,8 +305,8 @@ X_i =  \mu  + X_{A,i} + e_i
 \end{equation}
 where $e_i \sim N(0,V_E)$ and $X_{A,i}$ is normally distributed across
 individuals with covariance matrix $V_A A$ where the the entries for
-an pair of individuals i and i are 
-$A_{ij}= 2 F_{i,j}$ and $A_{ii} 1$. Given the matrix $A$ we can estimate $V_A$. We can
+a pair of individuals i and j are 
+$A_{ij}= 2 F_{i,j}$ and $A_{ii}= 1$. Given the matrix $A$ we can estimate $V_A$. We can
 also add fixed effects into this model to account for generation
 effects, additional mixed effects could also be included to account
 for shared environments between particular individuals (e.g. a shared nest).
@@ -326,15 +326,15 @@ interested in evolution over short time-scales we can (often) ignore
 the genetic basis of this correlation. 
 
 Consider two traits $X_{1,i}$ and $X_{2,i}$ in an indivdual $i$, these could be
-say the indivdual's leg length and nose length. As before we can write
+say the individual's leg length and nose length. As before we can write
 these as 
 \begin{eqnarray}
 X_{1,i} &= \mu_1+ X_{1,A,i} + X_{1,E,i}  \nonumber \\
 X_{2,i} &= \mu_2 +X_{2,A,i} + X_{2,E,i} \nonumber \\
 \end{eqnarray}
 As before we can talk about the total phenotypic variance ($V_1,V_2$),
-environmental variance  ($V_{1,E}$ and $V_{2,E}$), and the additive variance and in trait one and two
-and ($V_{1,A}$, $V_{2,A}$). But now we also have to consider the 
+environmental variance  ($V_{1,E}$ and $V_{2,E}$), and the additive genetic variance in trait one and two
+($V_{1,A}$, $V_{2,A}$). But now we also have to consider the 
 total covariance $V_{1,2}=Cov(X_{1},X_{2})$, the environmentally induced covariance between the traits ($V_{E,1,2}=Cov(X_{1,E}
 ,X_{2,E} )$) and the additive genetic covariance ($V_{A,1,2}
 =Cov(X_{1,A} ,X_{2,A} )$) between trait one and two.
@@ -467,7 +467,7 @@ selection is
 The probability that an organism with a phenotype $X$ survives to
 reproduce is $w(X)$, and we'll think about this as the fitness of
 our organism. The probability distribution of phenotypes in those who
-do reproduce is
+do survive to reproduce is
 \begin{equation}
 \P(X | \textrm{survive}) =  \frac{p(x) w(x)}{
 \int_{-\infty}^{\infty} p(x) w(x) dx}.
