--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -674,6 +674,23 @@ the mutations that have occurred in $2T$ generations worth of
 transmissions. Thus the average number of neutral mutational
 differences separating our pair of species is simply $2\mu (1-C) T$.\\
 
+\begin{question}
+For this, and the next question, assume that humans and chimp diverged
+around 5.5$\times 10^6$ years, a generation time ~20 years, that the speciation occurred instantaneously in allopatry with no subsequent gene flow, and the ancestral effective population size of the human and chimp common ancestor population was 10,000 individuals.\\
+Nachman and Crowell sequenced 12 pseudogenes in human and chimp found substitutions at 1.3\% of sites. \\
+{\bf A) } What can you say about the mutation rate per site per generation at these genes, and how does it compare to other estimates of human mutation rate?\\
+{\bf B)} All of the pseudogenes they sequenced are on the autosomes. What
+would you prediction be for pseudogenes on the X and Y chromosomes,
+given that there are fewer rounds of replication in the female
+germline than in the male germline.
+\end{question}
+
+\begin{question}
+The gorilla lineage split from the human-chimp lineage $\sim$7 million years ago. Let’s assume that this speciation event occurred instantaneously in allopatry with no subsequent gene flow. \\
+{\bf A)}	What is the probability of that Gorilla is not an outgroup to human and chimp at a single locus?\\
+{\bf B)}	It has been estimated that the Gorilla lineage is not an outgroup at around ~30\% of autosomal loci. What effective population size would you need to assume to explain this observation? Is that only plausible explanation?\\
+{\bf C)}	The Gorilla lineage is an outgroup for large portions of the X chromosome, what is a plausible explanation for this finding?
+\end{question}
 
 
 \subsection{Neutral diversity and population structure}
@@ -832,6 +849,14 @@ from our mainland would greatly outnumber those from our
 island. Therefore, considering our island our sub-population we have
 derived another simple model of $F_{ST}$ .
 
-
+\begin{question}
+You are investigating a small river population of sticklebacks, which receives infrequent migrants from a very large marine population. At a set of (putativelyneutral biallelic markers the freshwater population has frequencies:\\
+0.2, 0.7, 0.8\\
+at the same markers the marine population has frequencies:\\
+0.4, 0.5 and 0.7.\\
+ From studying patterns of heterozygosity at a large collection of markers, you have estimated the long term effective size of your freshwater population is 2000 individuals.\\
+What is your estimate of the migration rate from the marine
+populations into the river?
+\end{question}
 \newpage
 
