--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -7,14 +7,14 @@ Genetic drift occurs because more or less copies of an allele by chance
 can be transmitted to the next generation. This can occur because by
 chance the individuals carrying a particular allele can 
 leave more or less offspring in the next generation. In a sexual
-population genetic drift also occurs because mendelian transmission
+population genetic drift also occurs because Mendelian transmission
 means that only one of the two alleles in an individual, chosen at
 random at a locus, is transmitted to the offspring. 
 
-Genetic drift can play a role in the dynamics of all alleles and
-populations, but it will play the biggest role for neutral alleles. A neutral polymorphism occurs when the segregating alleles at a
-polymorphic site have no discernable effect on
-the fitness (we'll make clear what we mean by discernable later, for
+Genetic drift can play a role in the dynamics of all alleles and populations,
+but it will play the biggest role for neutral alleles. A neutral polymorphism
+occurs when the segregating alleles at a polymorphic site have no discernible
+effect on the fitness (we'll make clear what we mean by discernible later, for
 the moment think of this as “no effect” on fitness). 
 
 
