--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -11,6 +11,7 @@
 \usepackage{marginnote}
 \usepackage{color}
 \usepackage{fullpage}
+\usepackage{nicefrac}
 \usepackage[hypertexnames=false]{hyperref}
 \hypersetup{colorlinks=true, urlcolor=blue, citecolor=black, linkcolor=black}
 
